--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,19 @@
   "description": "social media for sharing injustice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "express": "^4.21.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
