--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "python-shell": "^5.0.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
