--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "python-shell": "^5.0.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
